@@ -1,3 +1,6 @@
+Jan 14, 2022
+  renamed dist from 'PharmGKB' to 'pharmgkb-pipeline'
+
 Jan 03, 2022
   updated log4j to avoid zero day exploit
 
